<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="16dp"
              android:background="@color/material_deep_teal_500"
              tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_title"
        android:textSize="45sp"/>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:inputType="textPersonName"
        android:hint="@string/username_hint"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:hint="@string/password_hint"/>

    <TextView
        android:id="@+id/password_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_button"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/twitterLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitter_login_button"/>

    <Button
        android:id="@+id/FacebookLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_login_button"/>


</LinearLayout>
