<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_deep_teal_500"
    android:orientation="vertical"
    tools:context="com.icaboalo.devf.RegisterActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/first_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/first_name_input_layout"
            android:layout_toRightOf="@+id/first_name_input_layout">

            <EditText
                android:id="@+id/last_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name_hint"
                android:inputType="textPersonName"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name_input_layout">

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_input_layout">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/password_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/password_input_layout"
            android:layout_toEndOf="@+id/password_input_layout"
            android:layout_toRightOf="@+id/password_input_layout"
            android:textSize="28sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_input_confirmation_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_input_layout">

            <EditText
                android:id="@+id/password_input_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/password_repetition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/password_input_confirmation_layout"
            android:layout_toEndOf="@+id/password_input_confirmation_layout"
            android:layout_toRightOf="@+id/password_input_confirmation_layout"
            android:textSize="28sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"/>


</LinearLayout>
